--- a/_config.yml
+++ b/_config.yml
@@ -10,10 +10,10 @@
 ############################
 
 # Name of website
-title: Jong  In's Web
+title: "Jong  In's Web"
 
 # Your name to show in the footer
-author: Jong In Lim
+author: "Jong In Lim"
 
 ###############################################
 # --- List of links in the navigation bar --- #
